--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,25 @@
       <button>Create an Item</button>
     </div>
     <div class="items-container">
+      <form action="/" method="get" id="tagForm">
+        <p>Tags:</p>
+        <input type="radio" id="Damage" name="tag" value="Damage" <%= selectedTag ==='Damage' ? 'checked' : '' %> > 
+        <label for="Damage">Damage</label>
+        <input type="radio" id="SpellDamage" name="tag" value="SpellDamage" <%= selectedTag ==='SpellDamage' ? 'checked' : '' %>>
+        <label for="SpellDamage">Spell Damage</label>
+        <input type="radio" id="Health" name="tag" value="Health" <%= selectedTag ==='Health' ? 'checked' : '' %>>
+        <label for="Health">Health</label>
+        <input type="radio" id="Armor" name="tag" value="Armor" <%= selectedTag ==='Armor' ? 'checked' : '' %>>
+        <label for="Armor">Armor</label>
+        <input type="radio" id="SpellBlock" name="tag" value="SpellBlock" <%= selectedTag ==='SpellBlock' ? 'checked' : '' %>>
+        <label for="SpellBlock">Magic Resist</label>
+      </form>
+      <!-- make filters: for tags and price asc/desc. maybe for final items or not
+       when clicking on filter, query will happen https://www.geeksforgeeks.org/node-js/difference-between-req-query-and-req-params-in-express/ 
+       use query to apply filter to db, like in message board
+       async function renderMessageGet(req, res) {
+  const messageId = req.params.messageId;
+  const result = await pool.query("SELECT * FROM messages where id = $1", [messageId]);-->
       <ul>
           <% for (let i = 0; i < items.length; i++) { %>
               <div>
@@ -20,5 +39,13 @@
           <% } %>
       </ul>
     </div>
+    <script>
+      const tagForm = document.querySelectorAll("input[name='tag']");
+      tagForm.forEach((radioButton) => {
+        radioButton.addEventListener('change', () => {
+          document.getElementById('tagForm').submit();
+        })
+      })
+    </script>
   </body>
 </html>
