--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
       <button>Create an Item</button>
     </div>
     <div class="items-container">
-      <form action="/" method="get" id="tagForm">
+      <form action="/" method="get" id="filterForm">
         <p>Tags:</p>
         <input type="radio" id="Damage" name="tag" value="Damage" <%= selectedTag ==='Damage' ? 'checked' : '' %> > 
         <label for="Damage">Damage</label>
@@ -22,6 +22,14 @@
         <label for="Armor">Armor</label>
         <input type="radio" id="SpellBlock" name="tag" value="SpellBlock" <%= selectedTag ==='SpellBlock' ? 'checked' : '' %>>
         <label for="SpellBlock">Magic Resist</label>
+      <!-- </form>
+
+      <form action="/" method="get" id="priceSortForm"> -->
+        <p>Sort by price:</p>
+        <input type="radio" id="Ascending" name="priceSort" value="Ascending" <%= selectedPriceSort ==='Ascending' ? 'checked' : '' %> > 
+        <label for="Ascending">Ascending</label>
+        <input type="radio" id="Descending" name="priceSort" value="Descending" <%= selectedPriceSort ==='Descending' ? 'checked' : '' %>>
+        <label for="Descending">Descending</label>
       </form>
       <!-- make filters: for tags and price asc/desc. maybe for final items or not
        when clicking on filter, query will happen https://www.geeksforgeeks.org/node-js/difference-between-req-query-and-req-params-in-express/ 
@@ -40,10 +48,17 @@
       </ul>
     </div>
     <script>
-      const tagForm = document.querySelectorAll("input[name='tag']");
-      tagForm.forEach((radioButton) => {
+      const tagFormInputs = document.querySelectorAll("input[name='tag']");
+      tagFormInputs.forEach((radioButton) => {
         radioButton.addEventListener('change', () => {
-          document.getElementById('tagForm').submit();
+          document.getElementById('filterForm').submit();
+        })
+      })
+
+      const priceFormInputs = document.querySelectorAll("input[name='priceSort']");
+      priceFormInputs.forEach((radioButton) => {
+        radioButton.addEventListener('change', () => {
+          document.getElementById('filterForm').submit();
         })
       })
     </script>
