--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div>Shopkeeper's inventory</div>
-    <a href="">Home</a>
+    <a href="/">Home</a>
     <form method="get" action="">
         <input type="text" name="search-items" id="search-items" placeholder="search items...">
         <button>
