Add hyperlink from item page tags back to home and default asc price sorting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 
       <form action="/" method="get" id="priceSortForm"> -->
         <p>Sort by price:</p>
-        <input type="radio" id="Ascending" name="priceSort" value="ASC" <%= selectedPriceSort ==='ASC' ? 'checked' : '' %> > 
+        <input type="radio" id="Ascending" name="priceSort" value="ASC" checked <%= selectedPriceSort ==='ASC' ? 'checked' : '' %> > 
         <label for="Ascending">Ascending</label>
         <input type="radio" id="Descending" name="priceSort" value="DESC" <%= selectedPriceSort ==='DESC' ? 'checked' : '' %>>
         <label for="Descending">Descending</label>
