--- a/views/item.ejs
+++ b/views/item.ejs
@@ -11,12 +11,27 @@
       <img src="<%= item.image_url %>" alt="">
       <div><%= item.name %></div>
       <div><%= item.price %> gold</div>
-      <span>Tags: </span>
-      <% if (tags) {%>
-        <% for (let tag of tags) { %>
-          <a href="../?tag=<%= tag %>"><%= tag %></a>
-        <% }; %>
-      <% } %>
+      <div>
+        <span>Tags: </span>
+        <% if (tags) {%>
+          <% for (let tag of tags) { %>
+            <a href="../?tag=<%= tag.item_tag %>"><%= tag.item_tag %></a>
+          <% }; %>
+        <% } %>
+      </div>
+
+      <div>
+        <span>Item components: </span>
+        <% if (components) {%>
+          <% for (let component of components) { %>
+             <div>
+              <a href="../item/<%= component.id %>"><%= component.name %></a>
+              <div><%= component.price %> gold</div>
+              <img src="<%= component.image_url %>" alt="">
+             </div>
+          <% }; %>
+        <% } %>
+      </div>
     </div>
     <script>
 
