--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,14 @@
 <html>
-  <head>
-   <title><%= title %></title>
-   <!-- <link rel="stylesheet" href="/styles.css"> -->
-  </head>
-  <body>
-    <%- include("partials/navbar") %>
+
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <!-- <link rel="stylesheet" href="/styles.css"> -->
+</head>
+
+<body>
+  <%- include("partials/navbar") %>
     <div>
       <div>Items:</div>
       <button>Create an Item</button>
@@ -12,38 +16,31 @@
     <div class="items-container">
       <form action="/" method="get" id="filterForm">
         <p>Tags:</p>
-        <input type="radio" id="Damage" name="tag" value="Damage" <%= selectedTag ==='Damage' ? 'checked' : '' %> > 
-        <label for="Damage">Damage</label>
-        <input type="radio" id="SpellDamage" name="tag" value="SpellDamage" <%= selectedTag ==='SpellDamage' ? 'checked' : '' %>>
-        <label for="SpellDamage">Spell Damage</label>
-        <input type="radio" id="Health" name="tag" value="Health" <%= selectedTag ==='Health' ? 'checked' : '' %>>
-        <label for="Health">Health</label>
-        <input type="radio" id="Armor" name="tag" value="Armor" <%= selectedTag ==='Armor' ? 'checked' : '' %>>
-        <label for="Armor">Armor</label>
-        <input type="radio" id="SpellBlock" name="tag" value="SpellBlock" <%= selectedTag ==='SpellBlock' ? 'checked' : '' %>>
-        <label for="SpellBlock">Magic Resist</label>
-      <!-- </form>
-
-      <form action="/" method="get" id="priceSortForm"> -->
+      <% tags.forEach(function(tag) { %>
+        <input type="radio" id="<%= tag%>" name="tag" value="<%= tag%>" <%=selectedTag=== tag ? 'checked' : '' %>>
+        <label for="<%=tag%>"><%= tag %></label>
+      <% }) %> 
+      <!-- </form> using same form for both
+      <form action="/" method="get" id="priceSortForm">  -->
         <p>Sort by price:</p>
-        <input type="radio" id="Ascending" name="priceSort" value="ASC" checked <%= selectedPriceSort ==='ASC' ? 'checked' : '' %> > 
+        <input type="radio" id="Ascending" name="priceSort" value="ASC" checked <%=selectedPriceSort==='ASC' ? 'checked'
+          : '' %> >
         <label for="Ascending">Ascending</label>
-        <input type="radio" id="Descending" name="priceSort" value="DESC" <%= selectedPriceSort ==='DESC' ? 'checked' : '' %>>
+        <input type="radio" id="Descending" name="priceSort" value="DESC" <%=selectedPriceSort==='DESC' ? 'checked' : ''
+          %>>
         <label for="Descending">Descending</label>
       </form>
-      <!-- make filters: for tags and price asc/desc. maybe for final items or not
-       when clicking on filter, query will happen https://www.geeksforgeeks.org/node-js/difference-between-req-query-and-req-params-in-express/ 
-       use query to apply filter to db, like in message board
-       async function renderMessageGet(req, res) {
-  const messageId = req.params.messageId;
-  const result = await pool.query("SELECT * FROM messages where id = $1", [messageId]);-->
       <ul>
-          <% for (let i = 0; i < items.length; i++) { %>
-              <div>
-                  <img src="<%= items[i].image_url %>" alt="">
-                  <div><%= items[i].name %></div>
-                  <div><%= items[i].price %> gold</div>
-              </div>
+        <% for (let i=0; i < items.length; i++) { %>
+          <div>
+            <img src="<%= items[i].image_url %>" alt="">
+            <a href="../item/<%= items[i].id %>">
+              <%= items[i].name %>
+            </a>
+            <div>
+              <%= items[i].price %> gold
+            </div>
+          </div>
           <% } %>
       </ul>
     </div>
@@ -62,5 +59,6 @@
         })
       })
     </script>
-  </body>
+</body>
+
 </html>
