--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,14 @@
 <nav>
     <div>Shopkeeper's inventory</div>
-    <a href="/">Home</a>
+    <div class="nav-links">
+        <a href="/">Home</a>
+        <a href="/createNewItem">Create New Item</a>
+        <a href="/createNewTag">Create New Tag</a>
+    </div>
     <form method="get" action="">
-        <input type="text" name="search-items" id="search-items" placeholder="search items...">
+        <input type="search" name="search-items" id="search-items" placeholder="search items..."> 
         <button>
+            <!-- not implemented yet. already have a route /item/{itemName}. maybe search will search the db? results either in dropdown or new page? or same page with param? -->
             <img src="/utils/magnify.svg" width="20" height="20">
         </button>
     </form>
