Add support for creating new tags

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
     <div class="nav-links">
         <a href="/">Home</a>
         <a href="/createNewItem">Create New Item</a>
-        <a href="/createNewTag">Create New Tag</a>
+        <a href="/manageTags">Manage Tags</a>
     </div>
     <form method="get" action="">
         <input type="search" name="search-items" id="search-items" placeholder="search items..."> 
