Fix getFilteredItems returning wrong item name and update getItemTags to use new tables

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
       </form>
       <ul>
         <% for (let i=0; i < items.length; i++) { %>
+                        <%= console.log(items[i], "items i") %>
           <div>
             <img src="<%= items[i].image_url %>" alt="">
             <a href="../item/<%= items[i].id %>">
