--- a/views/item.ejs
+++ b/views/item.ejs
@@ -15,7 +15,7 @@
         <span>Tags: </span>
         <% if (tags) {%>
           <% for (let tag of tags) { %>
-            <a href="../?tag=<%= tag.item_tag %>"><%= tag.item_tag %></a>
+            <a href="../?tag=<%= tag.name %>"><%= tag.name %></a>
           <% }; %>
         <% } %>
       </div>
