Update createNewItem logic to use new tags tables

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,10 @@
 
 <body>
   <%- include("partials/navbar") %>
-    <div>
+    <!-- <div>
       <div>Items:</div>
       <button>Create an Item</button>
-    </div>
+    </div> -->
     <div class="items-container">
       <form action="/" method="get" id="filterForm">
         <p>Tags:</p>
