--- a/views/item.ejs
+++ b/views/item.ejs
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-   <title><%= item.name %></title>
+  <title>
+    <%= item.name %>
+  </title>
   <!-- <link rel="stylesheet" href="/styles.css"> -->
 </head>
 
@@ -9,34 +11,65 @@
   <%- include("partials/navbar") %>
     <div>
       <img src="<%= item.image_url %>" alt="">
-      <div><%= item.name %></div>
-      <div><%= item.price %> gold</div>
+      <div>
+        <%= item.name %>
+      </div>
+      <div>
+        <%= item.price %> gold
+      </div>
       <div>
         <span>Tags: </span>
         <% if (tags) {%>
           <% for (let tag of tags) { %>
-            <a href="../?tag=<%= tag.name %>"><%= tag.name %></a>
-          <% }; %>
-        <% } %>
+            <a href="../?tag=<%= tag.name %>">
+              <%= tag.name %>
+            </a>
+            <% }; %>
+              <% } %>
       </div>
 
       <div>
         <span>Item components: </span>
-        <% if (components && components.length > 0) {%>
+        <% if (components && components.length> 0) {%>
           <% for (let component of components) { %>
-             <div>
-              <a href="../item/<%= component.id %>"><%= component.name %></a>
-              <div><%= component.price %> gold</div>
+            <div>
+              <a href="../item/<%= component.id %>">
+                <%= component.name %>
+              </a>
+              <div>
+                <%= component.price %> gold
+              </div>
               <img src="<%= component.image_url %>" alt="">
-             </div>
-          <% }; %>
-        <% } else { %>
-          <div> This is a base item, there are no smaller components.</div>
-        <% } %>
+            </div>
+            <% }; %>
+              <% } else { %>
+                <div> This is a base item, there are no smaller components.</div>
+                <% } %>
       </div>
+      <button id="delete-button" data-id="<%=item.id%>">Delete Item</button>
     </div>
     <script>
+      document.getElementById("delete-button").addEventListener("click", async function () {
+        const confirmed = confirm("Delete Item Permanently?");
+        const itemId = this.getAttribute("data-id");
+        console.log(itemId, " itemid")
+        if (!confirmed) return;
+        try {
+          const response = await fetch(`/item/${itemId}`, {
+            method: "DELETE"
+          });
+          if (response.ok) {
+            alert("item deleted");
+            window.location.href = "/"; // Redirect to homepage or wherever you want
+          } else {
+            alert("error deleting item");
+          }
 
+        } catch (error) {
+          console.log("error deleting ", error);
+          alert("An error occurred."); //
+        }
+      })
     </script>
 </body>
 
