Align navbar items and absolute position search dropdown

--- a/views/createNewItem.ejs
+++ b/views/createNewItem.ejs
@@ -4,6 +4,8 @@
   <title>
     <%= title %>
   </title>
+  <link rel="stylesheet" href="/styles.css">
+
 </head>
 
 <body>
@@ -27,7 +29,7 @@
         </fieldset>
         <label for="item-components">Add item components</label>
         <input type="search" id="item-components">
-              <div id="item-components-list"></div>
+        <div id="item-components-list"></div>
         <button type="submit">Create Item</button>
       </form>
       <div>
