--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,11 @@
-<nav>
-    <div>Shopkeeper's inventory</div>
-    <div class="nav-links">
-        <a href="/">Home</a>
-        <a href="/createNewItem">Create New Item</a>
-        <a href="/manageTags">Manage Tags</a>
+<nav class="header">
+    <div class="title-and-links">
+        <h1 class="title">Shopkeeper's inventory</h1>
+        <div class="nav-links">
+            <a href="/">Home</a>
+            <a href="/createNewItem">Create New Item</a>
+            <a href="/manageTags">Manage Tags</a>
+        </div>
     </div>
     <form method="get" action="" id="search-items-form">
         <input type="search" name="search-items" id="search-items" placeholder="search items...">
