--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,23 @@
+.header {
+    background-color: #2b313d;
+    color: white;
+    /* text-decoration: none; */
+}
+
+body {
+    margin: 0;
+}
+
+.nav-links>a {
+    text-decoration: none;
+    color: white;
+    margin-left: 26px;
+}
+
+.nav-links > a:hover {
+    color: #a0c4ff;
+}
+
 #item-list {
     position: absolute;
     border: 1px solid red;
@@ -10,10 +30,12 @@
 .title-and-links {
     display: flex;
     justify-content: space-between;
+    margin: 20px;
 }
 
 .nav-links {
     align-content: center;
+    font-size: larger;
 }
 
 nav {
